@@ -57,6 +57,12 @@ class SeventhBad(object):  # [single-string-used-for-slots]
 class EighthBad(object):  # [single-string-used-for-slots]
     __slots__ = deque.__name__
 
+class NinthBad(object):
+    __slots__ = [str]  # [invalid-slots-object]
+
+class TenthBad(object):
+    __slots__ = [1 + 2 + 3]  # [invalid-slots-object]
+
 class PotentiallyGood(object):
     __slots__ = func()
 
