@@ -9,6 +9,9 @@ Release date: TBA
 ..
   Put new features here and also in 'doc/whatsnew/2.14.rst'
 
+* Update ``invalid-slots-object`` message to show bad object rather than its inferred value.
+
+  Closes #6101
 
 * Added new checker ``typevar-name-mismatch``: TypeVar must be assigned to a variable with the same name as its name argument.
 
